# ocpn_pi-tutorial

./: CMakeLists.txt  README.md
forms/: minimalwindow.fbp
scripts/: generate_logo.sh
src/: demowindow.cpp  demowindow.h  icons.cpp  icons.h  logo.png.h  minimal_pi.cpp  minimal_pi.h  minimalgui.cpp  minimalgui.h  minimalwindow.cpp  minimalwindow.h  ocpn_plugin.h
